-	Summary: 		Refactored code -	Description: 		Refactored code: Use Boolean.valueOf() method instead of new Boolean() for better performance. -	Tests Description: 		Manual Test -	Files Added: 		None -	Files Edited: 		/org.eclipse.birt.report.designer.ui/src/org/eclipse/birt/report/designer/internal/ui/command/BaseInsertHandler.java 		/org.eclipse.birt.report.designer.ui/src/org/eclipse/birt/report/designer/internal/ui/command/CopyCellContentsHandler.java 		/org.eclipse.birt.report.designer.ui/src/org/eclipse/birt/report/designer/internal/ui/command/CopyHandler.java 		/org.eclipse.birt.report.designer.ui/src/org/eclipse/birt/report/designer/internal/ui/command/CreateChartHandler.java 		/org.eclipse.birt.report.designer.ui/src/org/eclipse/birt/report/designer/internal/ui/command/CreatePlaceHolderHandler.java 		/org.eclipse.birt.report.designer.ui/src/org/eclipse/birt/report/designer/internal/ui/command/CutHandler.java 		/org.eclipse.birt.report.designer.ui/src/org/eclipse/birt/report/designer/internal/ui/command/DeleteColumnHandler.java 		/org.eclipse.birt.report.designer.ui/src/org/eclipse/birt/report/designer/internal/ui/command/DeleteGrouphandler.java 		/org.eclipse.birt.report.designer.ui/src/org/eclipse/birt/report/designer/internal/ui/command/DeleteHandler.java 		/org.eclipse.birt.report.designer.ui/src/org/eclipse/birt/report/designer/internal/ui/command/DeleteRowHandler.java 		/org.eclipse.birt.report.designer.ui/src/org/eclipse/birt/report/designer/internal/ui/command/EditGroupHandler.java 		/org.eclipse.birt.report.designer.ui/src/org/eclipse/birt/report/designer/internal/ui/command/EditHandler.java 		/org.eclipse.birt.report.designer.ui/src/org/eclipse/birt/report/designer/internal/ui/command/EditStyleHandler.java 		/org.eclipse.birt.report.designer.ui/src/org/eclipse/birt/report/designer/internal/ui/command/ExportLibraryHandler.java 		/org.eclipse.birt.report.designer.ui/src/org/eclipse/birt/report/designer/internal/ui/command/ImportCSSHandler.java 		/org.e