@@ -44,7 +44,7 @@ public class CopyHandler extends SelectionHandler
 			Clipboard.getDefault( ).setContents( cloneElements );
 		}	
 		
-		return new Boolean(true);
+		return Boolean.valueOf( true );
 	}
 	
 }
