@@ -71,7 +71,7 @@ public class EditGroupHandler extends SelectionHandler
 			stack.rollbackAll( );
 		}
 
-		return new Boolean( true );
+		return Boolean.valueOf( true );
 	}
 
 	/**
