@@ -13,7 +13,6 @@ package org.eclipse.birt.report.designer.internal.ui.command;
 
 import java.io.File;
 
-import org.eclipse.birt.report.designer.core.model.SessionHandleAdapter;
 import org.eclipse.birt.report.designer.internal.ui.util.ExceptionHandler;
 import org.eclipse.birt.report.designer.internal.ui.util.UIUtil;
 import org.eclipse.birt.report.designer.internal.ui.views.ReportResourceChangeEvent;
@@ -24,7 +23,6 @@ import org.eclipse.birt.report.designer.ui.views.IReportResourceChangeEvent;
 import org.eclipse.birt.report.designer.ui.views.IReportResourceSynchronizer;
 import org.eclipse.birt.report.model.api.DesignElementHandle;
 import org.eclipse.birt.report.model.api.ReportDesignHandle;
-import org.eclipse.birt.report.model.api.command.LibraryChangeEvent;
 import org.eclipse.birt.report.model.api.util.ElementExportUtil;
 import org.eclipse.core.commands.ExecutionEvent;
 import org.eclipse.core.commands.ExecutionException;
@@ -100,7 +98,7 @@ public class ExportLibraryHandler extends SelectionHandler
 		wDialog.setPageSize( 500, 250 );
 		wDialog.open( );
 
-		return new Boolean( retBoolean );
+		return Boolean.valueOf( retBoolean );
 	}
 
 	public class ExportReportWizard extends Wizard
