@@ -15,7 +15,6 @@ import java.util.List;
 
 import org.eclipse.birt.report.designer.internal.ui.util.ExceptionHandler;
 import org.eclipse.birt.report.designer.internal.ui.util.UIUtil;
-import org.eclipse.birt.report.designer.ui.editors.AbstractMultiPageEditor;
 import org.eclipse.birt.report.model.api.DesignFileException;
 import org.eclipse.birt.report.model.api.LibraryHandle;
 import org.eclipse.birt.report.model.api.ModuleHandle;
@@ -23,8 +22,6 @@ import org.eclipse.birt.report.model.api.ReportDesignHandle;
 import org.eclipse.birt.report.model.api.activity.SemanticException;
 import org.eclipse.core.commands.ExecutionEvent;
 import org.eclipse.core.commands.ExecutionException;
-import org.eclipse.core.runtime.CoreException;
-import org.eclipse.ui.forms.editor.FormEditor;
 
 /**
  * 
@@ -79,7 +76,7 @@ public class RefreshLibraryHandler extends SelectionHandler
 		
 		UIUtil.refreshCurrentEditorMarkers( );
 
-		return new Boolean( retBoolean );
+		return Boolean.valueOf( retBoolean );
 	}
 
 	private Boolean reloadAllLibraries( Object obj )
@@ -90,6 +87,6 @@ public class RefreshLibraryHandler extends SelectionHandler
 			retBoolean = UIUtil.reloadModuleHandleLibraries( (ModuleHandle) obj );
 		}
 		UIUtil.refreshCurrentEditorMarkers( );
-		return new Boolean( retBoolean );
+		return Boolean.valueOf( retBoolean );
 	}
 }
